--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   firebase_auth: ^4.2.9
   firebase_core: ^2.7.0
   validatorless: ^1.2.3
+  flutter_overlay_loader: ^2.0.0
+  google_sign_in: ^6.0.2
 
 dev_dependencies:
   flutter_test:
